Update .gitignore to exclude private package and demo samples\n\nEnsures that the 'com.eitan.easymic.apm' private package and\n'EasyMic/Assets/Demo/Samples/AudioProcessing' are not included in the public repository.\nThis allows for proper open-sourcing while keeping sensitive or large demo assets private.

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,9 @@ StreamingAssets.meta
 # ====================== #
 # Project Specific Links #
 # ====================== #
+
+# ================== #
+# Custom Exclusions  #
+# ================== #
+EasyMic/Packages/com.eitan.easymic.apm/
+EasyMic/Assets/Demo/Samples/AudioProcessing/
