--- a/EasyMic/Packages/com.eitan.easymic/package.json
+++ b/EasyMic/Packages/com.eitan.easymic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.eitan.easymic",
-  "version": "0.1.0-pre-alpha.1",
+  "version": "0.1.0-exp.1",
   "displayName": "EasyMic",
   "description": "A simple Unity plugin for low-latency raw audio capture with a modular real-time processing pipeline.",
   "keywords": [
@@ -34,12 +34,19 @@
     "crossplatform"
   ],
   "unity": "2021.3",
-  "documentationUrl": "https://github.com/EitanWong/com.eitan.easymic#documentation",
-  "changelogUrl": "https://github.com/EitanWong/com.eitan.easymic/releases",
+  "documentationUrl": "https://github.com/EitanWong/com.eitan.easymic/tree/main/Packages/com.eitan.easymic/README.md",
+  "changelogUrl": "https://github.com/EitanWong/com.eitan.easymic/tree/main/Packages/com.eitan.easymic/CHANGELOG.md",
   "license": "MIT",
+  "samples": [
+    {
+      "displayName": "Recording Example",
+      "description": "A simple scene demonstrating the fundamental usage of EasyMic for recording audio from a microphone and saving it as a WAV file.",
+      "path": "Samples~/Recording"
+    }
+  ],
   "repository": {
     "type": "git",
-    "repository": "https://github.com/EitanWong/com.eitan.easymic.git"
+    "repository": "https://github.com/EitanWong/com.eitan.easymic.git#upm"
   },
   "author": {
     "name": "Eitan",
