docs(core): add version banner + changelog link; update 0.1.1-exp changelog; clarify AEC playback routing
- README.md / README_zh-CN.md:
    - Add “Latest Version: 0.1.1-exp (2025-08-24)” banner with link to CHANGELOG.
    - Short highlights: new low-latency playback/mixing subsystem, non-blocking recording refactor, new Playback Example, AEC playback
requirement.
- CHANGELOG.md:
    - Added sample scene Samples~/Playback Example.
    - Refactored recording core to non-blocking, high-performance path.
    - Clarified AEC guidance: playback must use PlaybackAudioSource/PlaybackAudioSourceBehaviour.
- No breaking API changes.

--- a/EasyMic/Packages/com.eitan.easymic/Samples~/Playback Example/Eitan.EasyMic.Samples.Playback.asmdef
+++ b/EasyMic/Packages/com.eitan.easymic/Samples~/Playback Example/Eitan.EasyMic.Samples.Playback.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Eitan.EasyMic.Samples",
-    "rootNamespace": "Eitan.EasyMic.Samples",
+    "name": "Eitan.EasyMic.Samples.Playback",
+    "rootNamespace": "Eitan.EasyMic.Samples.Playback",
     "references": [
         "Eitan.EasyMic"
     ],
