--- a/Samples~/Playback Example/Eitan.EasyMic.Samples.Playback.asmdef
+++ b/Samples~/Playback Example/Eitan.EasyMic.Samples.Playback.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Eitan.EasyMic.Samples",
-    "rootNamespace": "Eitan.EasyMic.Samples",
+    "name": "Eitan.EasyMic.Samples.Playback",
+    "rootNamespace": "Eitan.EasyMic.Samples.Playback",
     "references": [
         "Eitan.EasyMic"
     ],
