Auto stash before merge of "main" and "origin/main"

--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,4 @@ EasyMic/Assets/Demo/Samples/AudioProcessing/
 # ================== #
 CLAUDE.md
 GEMINI.md
-*.apm
+EasyMic/Packages/com.eitan.easymic.apm
