feat: stabilize device enumeration, session recovery, threading, and permissions
Summary

Prevent crashes and improve robustness across device refresh, recording session switching, async readers, and cross‑platform permissions.
Details

MicSystem.Devices

Keep using miniaudio’s ContextGetDevices without freeing unmanaged arrays (miniaudio owns these); removed FreeDeviceInfos calls to fix double‑free crash in Editor.
Preserve improved device info resolution (detailed info fallback, stable naming, native format extraction).
RecordingSession

Make TrySwitchDevice resilient: on failure to switch devices, restore the previous device format and attempt to reinitialize. Preserve prior fallback state. Log both switch and restoration errors.
AudioReader

Ensure only one worker thread exists: stop and dispose any existing worker before reinitialization; added StopWorkerThread() and call it from Initialize/Dispose.
Clean up thread, signal, queue, and buffers deterministically to avoid leaks and duplicate workers during reconfig.
PermissionUtils

Return true on non‑Android platforms (Editor/desktop/iOS) to avoid false “permission denied”.
On Android, request/update permission state properly via Unity’s Permission API.
Why

Fixes a regression causing a native crash during device enumeration (double free).
Prevents silent recording teardown when hot‑switching devices fails.
Avoids background thread leaks and race conditions when reinitializing readers.
Ensures sane permission semantics across platforms.
Notes

No behavioral changes to public API; stability and safety improvements only.
Validated by code reasoning; Unity runtime tests not executed in this environment.

--- a/EasyMic/Packages/com.eitan.easymic/Runtime/Eitan.EasyMic.asmdef
+++ b/EasyMic/Packages/com.eitan.easymic/Runtime/Eitan.EasyMic.asmdef
@@ -2,7 +2,8 @@
     "name": "Eitan.EasyMic",
     "rootNamespace": "Eitan.EasyMic.Runtime",
     "references": [
-        "GUID:07ab32fb435924c839dac3592be307df"
+        "GUID:07ab32fb435924c839dac3592be307df",
+        "UnityEngine.AndroidJNIModule"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
