--- a/EasyMic/Packages/manifest.json
+++ b/EasyMic/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.test-framework": "1.1.33",
     "com.unity.ugui": "1.0.0",
     "com.utilities.buildpipeline": "1.5.7",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.audio": "1.0.0"
   },
   "scopedRegistries": [
