--- a/Runtime/Eitan.EasyMic.asmdef
+++ b/Runtime/Eitan.EasyMic.asmdef
@@ -2,8 +2,7 @@
     "name": "Eitan.EasyMic",
     "rootNamespace": "Eitan.EasyMic.Runtime",
     "references": [
-        "GUID:07ab32fb435924c839dac3592be307df",
-        "UnityEngine.AndroidJNIModule"
+        "GUID:07ab32fb435924c839dac3592be307df"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
