feat: Add SherpaKeywordDetector and optimize audio backend
This commit introduces version 0.1.2-exp.1.

Key changes:

- Adds the `SherpaKeywordDetector` processor for wake-word detection, leveraging the `com.eitan.sherpa-onnx-unity` package.

- Removes the `soundio` dependency on desktop platforms to simplify the audio backend.

- Optimizes the `AudioPlayback` system to run on a background thread, ensuring uninterrupted audio when the app is not in focus.

- Enhances device information retrieval to expose detailed channel counts and supported sample rates.

- General performance improvements and code refactoring.

Updates documentation, including the CHANGELOG and README files, to reflect these new features and changes.

--- a/EasyMic/Packages/com.eitan.easymic/Runtime/Eitan.EasyMic.asmdef
+++ b/EasyMic/Packages/com.eitan.easymic/Runtime/Eitan.EasyMic.asmdef
@@ -2,8 +2,7 @@
     "name": "Eitan.EasyMic",
     "rootNamespace": "Eitan.EasyMic.Runtime",
     "references": [
-        "GUID:07ab32fb435924c839dac3592be307df",
-        "UnityEngine.AndroidJNIModule"
+        "GUID:07ab32fb435924c839dac3592be307df"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
