Audio playback: dynamic format-aware streaming, loop-safe callbacks, global static API
PlaybackAudioSource

Add format-aware Enqueue overload with (channels, sampleRate) and optional EOS flag.
High‑quality resampling + channel mapping path (linear for enqueue, cubic in render).
Add OnPlaybackCompleted event; fire on EOS drain; add loop boundary signaling via deferred dispatch on audio thread.
Track buffered/played frames robustly; avoid partial-frame drift; align reads/writes.
Guard completion and loop callbacks with atomic flags; reset on progress reset.
PlaybackAudioSourceBehaviour

Reuse a single source; adapt to device format; remove frequent allocations.
Accept streaming Enqueue with format info; add CompleteStream API.
Clip feeder thread: watermarks, precise position tracking, no overreads, graceful stop.
Looping: continuous playback with boundary callback emitted at clip wrap; EOS still triggers completion.
Expose OnPlaybackCompleted for clips and streams.
AudioPlayback (new global static facade)

Simple clip/stream playback without MonoBehaviour; returns PlaybackHandle.
Handle controls: Play/Pause/Stop, Volume, Enqueue (..., ch, rate, eos), CompleteStream, callbacks.
Looping clips keep handles alive; non-looped can auto-dispose on completion.
Internal managed feeder mirrors behaviour path; safe thread shutdown.
Safety/Perf/Robustness

All feeder loops check stop flags promptly; no tight spin; minimal GC under audio thread.
All buffer interactions frame-aligned; channel/sample-rate conversion avoids drift.
Loop boundary callback deferred to audio thread to avoid reentrancy and duplication.
CompleteStream disables loop before EOS to guarantee final drain.

--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,6 @@ EasyMic/Assets/Demo/Samples/AudioProcessing/
 # ================== #
 CLAUDE.md
 GEMINI.md
+
 EasyMic/Packages/com.eitan.easymic.apm
+EasyMic/Packages/com.eitan.sherpa-onnx-unity
