--- a/EasyMic/Packages/manifest.json
+++ b/EasyMic/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.eitan.sherpa-onnx-unity": "https://github.com/EitanWong/com.eitan.sherpa-onnx-unity.git#upm",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.test-framework": "1.1.33",
     "com.unity.ugui": "1.0.0",
